# reolink-fw

./: README.md  cramfs.ksy  fwinfo.py  mypakler.py  pyproject.toml  reolinkfw.py  requirements.txt
.github/workflows/: auto_update.yml  build-publish.yml
reolinkfw/: __init__.py  __main__.py  cramfs.py  extract.py  fdt.py  tmpfile.py  typedefs.py  ubifs.py  uboot.py  util.py
